k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-compara-frontend
  namespace: super-compara
  labels:
    app: super-compara-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: super-compara-frontend
  template:
    metadata:
      labels:
        app: super-compara-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/Floydano/super-compara-poc-frontend:latest
        ports:
        - containerPort: 80
